CommandPrompt/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> LINES
Rule 1     LINES -> LINE
Rule 2     LINES -> LINE NEWLINE LINES
Rule 3     LINE -> EXPRESSION
Rule 4     EXPRESSION -> LITERAL
Rule 5     EXPRESSION -> ASSIGNMENT
Rule 6     EXPRESSION -> MOD_ASSIGNMENT
Rule 7     EXPRESSION -> FUNCTION_CALL
Rule 8     EXPRESSION -> LPAREN EXPRESSION RPAREN
Rule 9     FUNCTION_CALL -> EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
Rule 10    FUNCTION_CALL -> EXPRESSION DOT IDENTIFIER LPAREN RPAREN
Rule 11    FUNCTION_CALL -> IDENTIFIER LPAREN COMMA_ARGS RPAREN
Rule 12    FUNCTION_CALL -> IDENTIFIER LPAREN RPAREN
Rule 13    FUNCTION_CALL -> IDENTIFIER
Rule 14    FUNCTION_CALL -> EXPRESSION DOT IDENTIFIER
Rule 15    COMMA_ARGS -> COMMA_ARGS COMMA EXPRESSION
Rule 16    COMMA_ARGS -> EXPRESSION
Rule 17    FUNCTION_CALL -> EXPRESSION BINARY_OPERATOR EXPRESSION
Rule 18    BINARY_OPERATOR -> PLUS
Rule 19    BINARY_OPERATOR -> MINUS
Rule 20    ASSIGNMENT -> IDENTIFIER EQUALS EXPRESSION
Rule 21    MOD_ASSIGNMENT -> IDENTIFIER ASSIGN_OPERATOR EXPRESSION
Rule 22    ASSIGN_OPERATOR -> PLUS_EQUALS
Rule 23    ASSIGN_OPERATOR -> MINUS_EQUALS
Rule 24    LITERAL -> INTEGER
Rule 25    LITERAL -> STRING
Rule 26    LITERAL -> ORDERED_PAIR
Rule 27    LITERAL -> LIST
Rule 28    ORDERED_PAIR -> LPAREN INTEGER COMMA INTEGER RPAREN
Rule 29    LIST -> LSQUARE RSQUARE
Rule 30    LIST -> LSQUARE ELEMENTS RSQUARE
Rule 31    ELEMENTS -> ELEMENTS COMMA ELEMENT
Rule 32    ELEMENTS -> INTEGER DOT DOT INTEGER
Rule 33    ELEMENTS -> ELEMENT
Rule 34    ELEMENT -> EXPRESSION

Terminals, with rules where they appear

COMMA                : 15 28 31
DOT                  : 9 10 14 32 32
EQUALS               : 20
IDENTIFIER           : 9 10 11 12 13 14 20 21
INTEGER              : 24 28 28 32 32
LPAREN               : 8 9 10 11 12 28
LSQUARE              : 29 30
MINUS                : 19
MINUS_EQUALS         : 23
NEWLINE              : 2
PLUS                 : 18
PLUS_EQUALS          : 22
RPAREN               : 8 9 10 11 12 28
RSQUARE              : 29 30
STRING               : 25
error                : 

Nonterminals, with rules where they appear

ASSIGNMENT           : 5
ASSIGN_OPERATOR      : 21
BINARY_OPERATOR      : 17
COMMA_ARGS           : 9 11 15
ELEMENT              : 31 33
ELEMENTS             : 30 31
EXPRESSION           : 3 8 9 10 14 15 16 17 17 20 21 34
FUNCTION_CALL        : 7
LINE                 : 1 2
LINES                : 2 0
LIST                 : 27
LITERAL              : 4
MOD_ASSIGNMENT       : 6
ORDERED_PAIR         : 26

Parsing method: LALR

state 0

    (0) S' -> . LINES
    (1) LINES -> . LINE
    (2) LINES -> . LINE NEWLINE LINES
    (3) LINE -> . EXPRESSION
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 1
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13

    EXPRESSION                     shift and go to state 6
    LITERAL                        shift and go to state 7
    LIST                           shift and go to state 4
    MOD_ASSIGNMENT                 shift and go to state 10
    ORDERED_PAIR                   shift and go to state 11
    LINES                          shift and go to state 14
    LINE                           shift and go to state 3
    FUNCTION_CALL                  shift and go to state 9
    ASSIGNMENT                     shift and go to state 5

state 1

    (24) LITERAL -> INTEGER .

    DOT             reduce using rule 24 (LITERAL -> INTEGER .)
    PLUS            reduce using rule 24 (LITERAL -> INTEGER .)
    MINUS           reduce using rule 24 (LITERAL -> INTEGER .)
    RPAREN          reduce using rule 24 (LITERAL -> INTEGER .)
    COMMA           reduce using rule 24 (LITERAL -> INTEGER .)
    NEWLINE         reduce using rule 24 (LITERAL -> INTEGER .)
    $end            reduce using rule 24 (LITERAL -> INTEGER .)
    RSQUARE         reduce using rule 24 (LITERAL -> INTEGER .)


state 2

    (25) LITERAL -> STRING .

    DOT             reduce using rule 25 (LITERAL -> STRING .)
    PLUS            reduce using rule 25 (LITERAL -> STRING .)
    MINUS           reduce using rule 25 (LITERAL -> STRING .)
    RPAREN          reduce using rule 25 (LITERAL -> STRING .)
    COMMA           reduce using rule 25 (LITERAL -> STRING .)
    NEWLINE         reduce using rule 25 (LITERAL -> STRING .)
    $end            reduce using rule 25 (LITERAL -> STRING .)
    RSQUARE         reduce using rule 25 (LITERAL -> STRING .)


state 3

    (1) LINES -> LINE .
    (2) LINES -> LINE . NEWLINE LINES

    $end            reduce using rule 1 (LINES -> LINE .)
    NEWLINE         shift and go to state 15


state 4

    (27) LITERAL -> LIST .

    DOT             reduce using rule 27 (LITERAL -> LIST .)
    PLUS            reduce using rule 27 (LITERAL -> LIST .)
    MINUS           reduce using rule 27 (LITERAL -> LIST .)
    RPAREN          reduce using rule 27 (LITERAL -> LIST .)
    COMMA           reduce using rule 27 (LITERAL -> LIST .)
    NEWLINE         reduce using rule 27 (LITERAL -> LIST .)
    $end            reduce using rule 27 (LITERAL -> LIST .)
    RSQUARE         reduce using rule 27 (LITERAL -> LIST .)


state 5

    (5) EXPRESSION -> ASSIGNMENT .

    DOT             reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    PLUS            reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    MINUS           reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    RSQUARE         reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    COMMA           reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    NEWLINE         reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    $end            reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)
    RPAREN          reduce using rule 5 (EXPRESSION -> ASSIGNMENT .)


state 6

    (3) LINE -> EXPRESSION .
    (9) FUNCTION_CALL -> EXPRESSION . DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> EXPRESSION . DOT IDENTIFIER LPAREN RPAREN
    (14) FUNCTION_CALL -> EXPRESSION . DOT IDENTIFIER
    (17) FUNCTION_CALL -> EXPRESSION . BINARY_OPERATOR EXPRESSION
    (18) BINARY_OPERATOR -> . PLUS
    (19) BINARY_OPERATOR -> . MINUS

    NEWLINE         reduce using rule 3 (LINE -> EXPRESSION .)
    $end            reduce using rule 3 (LINE -> EXPRESSION .)
    DOT             shift and go to state 18
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19

    BINARY_OPERATOR                shift and go to state 16

state 7

    (4) EXPRESSION -> LITERAL .

    DOT             reduce using rule 4 (EXPRESSION -> LITERAL .)
    PLUS            reduce using rule 4 (EXPRESSION -> LITERAL .)
    MINUS           reduce using rule 4 (EXPRESSION -> LITERAL .)
    RSQUARE         reduce using rule 4 (EXPRESSION -> LITERAL .)
    COMMA           reduce using rule 4 (EXPRESSION -> LITERAL .)
    NEWLINE         reduce using rule 4 (EXPRESSION -> LITERAL .)
    $end            reduce using rule 4 (EXPRESSION -> LITERAL .)
    RPAREN          reduce using rule 4 (EXPRESSION -> LITERAL .)


state 8

    (20) ASSIGNMENT -> IDENTIFIER . EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> IDENTIFIER . ASSIGN_OPERATOR EXPRESSION
    (11) FUNCTION_CALL -> IDENTIFIER . LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> IDENTIFIER . LPAREN RPAREN
    (13) FUNCTION_CALL -> IDENTIFIER .
    (22) ASSIGN_OPERATOR -> . PLUS_EQUALS
    (23) ASSIGN_OPERATOR -> . MINUS_EQUALS

    EQUALS          shift and go to state 20
    LPAREN          shift and go to state 21
    DOT             reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    PLUS            reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    MINUS           reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    NEWLINE         reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    $end            reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    RPAREN          reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    RSQUARE         reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    COMMA           reduce using rule 13 (FUNCTION_CALL -> IDENTIFIER .)
    PLUS_EQUALS     shift and go to state 23
    MINUS_EQUALS    shift and go to state 24

    ASSIGN_OPERATOR                shift and go to state 22

state 9

    (7) EXPRESSION -> FUNCTION_CALL .

    DOT             reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    PLUS            reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    MINUS           reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    RSQUARE         reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    COMMA           reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    NEWLINE         reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    $end            reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)
    RPAREN          reduce using rule 7 (EXPRESSION -> FUNCTION_CALL .)


state 10

    (6) EXPRESSION -> MOD_ASSIGNMENT .

    DOT             reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    PLUS            reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    MINUS           reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    RSQUARE         reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    COMMA           reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    NEWLINE         reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    $end            reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)
    RPAREN          reduce using rule 6 (EXPRESSION -> MOD_ASSIGNMENT .)


state 11

    (26) LITERAL -> ORDERED_PAIR .

    DOT             reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    PLUS            reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    MINUS           reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    RPAREN          reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    COMMA           reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    NEWLINE         reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    $end            reduce using rule 26 (LITERAL -> ORDERED_PAIR .)
    RSQUARE         reduce using rule 26 (LITERAL -> ORDERED_PAIR .)


state 12

    (8) EXPRESSION -> LPAREN . EXPRESSION RPAREN
    (28) ORDERED_PAIR -> LPAREN . INTEGER COMMA INTEGER RPAREN
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    INTEGER         shift and go to state 26
    LPAREN          shift and go to state 12
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13

    MOD_ASSIGNMENT                 shift and go to state 10
    ORDERED_PAIR                   shift and go to state 11
    EXPRESSION                     shift and go to state 25
    LITERAL                        shift and go to state 7
    LIST                           shift and go to state 4
    FUNCTION_CALL                  shift and go to state 9
    ASSIGNMENT                     shift and go to state 5

state 13

    (29) LIST -> LSQUARE . RSQUARE
    (30) LIST -> LSQUARE . ELEMENTS RSQUARE
    (31) ELEMENTS -> . ELEMENTS COMMA ELEMENT
    (32) ELEMENTS -> . INTEGER DOT DOT INTEGER
    (33) ELEMENTS -> . ELEMENT
    (34) ELEMENT -> . EXPRESSION
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    RSQUARE         shift and go to state 27
    INTEGER         shift and go to state 29
    LPAREN          shift and go to state 12
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13

    EXPRESSION                     shift and go to state 31
    LITERAL                        shift and go to state 7
    ELEMENTS                       shift and go to state 28
    LIST                           shift and go to state 4
    MOD_ASSIGNMENT                 shift and go to state 10
    ORDERED_PAIR                   shift and go to state 11
    ELEMENT                        shift and go to state 30
    FUNCTION_CALL                  shift and go to state 9
    ASSIGNMENT                     shift and go to state 5

state 14

    (0) S' -> LINES .



state 15

    (2) LINES -> LINE NEWLINE . LINES
    (1) LINES -> . LINE
    (2) LINES -> . LINE NEWLINE LINES
    (3) LINE -> . EXPRESSION
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 1
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13

    EXPRESSION                     shift and go to state 6
    LITERAL                        shift and go to state 7
    LIST                           shift and go to state 4
    MOD_ASSIGNMENT                 shift and go to state 10
    ORDERED_PAIR                   shift and go to state 11
    LINES                          shift and go to state 32
    LINE                           shift and go to state 3
    FUNCTION_CALL                  shift and go to state 9
    ASSIGNMENT                     shift and go to state 5

state 16

    (17) FUNCTION_CALL -> EXPRESSION BINARY_OPERATOR . EXPRESSION
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 1
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13

    MOD_ASSIGNMENT                 shift and go to state 10
    ORDERED_PAIR                   shift and go to state 11
    EXPRESSION                     shift and go to state 33
    LITERAL                        shift and go to state 7
    LIST                           shift and go to state 4
    FUNCTION_CALL                  shift and go to state 9
    ASSIGNMENT                     shift and go to state 5

state 17

    (18) BINARY_OPERATOR -> PLUS .

    LPAREN          reduce using rule 18 (BINARY_OPERATOR -> PLUS .)
    INTEGER         reduce using rule 18 (BINARY_OPERATOR -> PLUS .)
    STRING          reduce using rule 18 (BINARY_OPERATOR -> PLUS .)
    IDENTIFIER      reduce using rule 18 (BINARY_OPERATOR -> PLUS .)
    LSQUARE         reduce using rule 18 (BINARY_OPERATOR -> PLUS .)


state 18

    (9) FUNCTION_CALL -> EXPRESSION DOT . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> EXPRESSION DOT . IDENTIFIER LPAREN RPAREN
    (14) FUNCTION_CALL -> EXPRESSION DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 34


state 19

    (19) BINARY_OPERATOR -> MINUS .

    LPAREN          reduce using rule 19 (BINARY_OPERATOR -> MINUS .)
    INTEGER         reduce using rule 19 (BINARY_OPERATOR -> MINUS .)
    STRING          reduce using rule 19 (BINARY_OPERATOR -> MINUS .)
    IDENTIFIER      reduce using rule 19 (BINARY_OPERATOR -> MINUS .)
    LSQUARE         reduce using rule 19 (BINARY_OPERATOR -> MINUS .)


state 20

    (20) ASSIGNMENT -> IDENTIFIER EQUALS . EXPRESSION
    (4) EXPRESSION -> . LITERAL
    (5) EXPRESSION -> . ASSIGNMENT
    (6) EXPRESSION -> . MOD_ASSIGNMENT
    (7) EXPRESSION -> . FUNCTION_CALL
    (8) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (24) LITERAL -> . INTEGER
    (25) LITERAL -> . STRING
    (26) LITERAL -> . ORDERED_PAIR
    (27) LITERAL -> . LIST
    (20) ASSIGNMENT -> . IDENTIFIER EQUALS EXPRESSION
    (21) MOD_ASSIGNMENT -> . IDENTIFIER ASSIGN_OPERATOR EXPRESSION
    (9) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (10) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER LPAREN RPAREN
    (11) FUNCTION_CALL -> . IDENTIFIER LPAREN COMMA_ARGS RPAREN
    (12) FUNCTION_CALL -> . IDENTIFIER LPAREN RPAREN
    (13) FUNCTION_CALL -> . IDENTIFIER
    (14) FUNCTION_CALL -> . EXPRESSION DOT IDENTIFIER
    (17) FUNCTION_CALL -> . EXPRESSION BINARY_OPERATOR EXPRESSION
    (28) ORDERED_PAIR -> . LPAREN INTEGER COMMA INTEGER RPAREN
    (29) LIST -> . LSQUARE RSQUARE
    (30) LIST -> . LSQUARE ELEMENTS RSQUARE

    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 1
    STRING          shift and go to state 2
    IDENTIFIER      shift and go to state 8
    LSQUARE         shift and go to state 13
